--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>行内样式</title>
+    <title>HHome</title>
 </head>
 <body>
     <h1 style="color:rgb(52, 161, 52);font-size:30px">这里是H的小屋</h1>
